tests/skipjob/access-policy-retry/skipjob-not-ready.yaml
apiVersion: skiperator.kartverket.no/v1beta1
kind: SKIPJob
metadata:
  name: retry-job
status:
  accessPolicies: InvalidConfig
