tests/skipjob/access-policy-retry/target.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: retry-target
spec:
  image: image
  port: 8080
